fix:add more tab overflow page

--- a/src/assets/theme/antd.less
+++ b/src/assets/theme/antd.less
@@ -10,6 +10,7 @@
 @success-color: @theme-color;
 @link-color:rgba(0, 0, 0, 0.8);
 @processing-color: @theme-color;
+@tree-title-height: 30px;
 body {
   line-height: initial;
 }
